Spacing issues.

--- a/sites/mainframe50/css/scss/_ww_cci.scss
+++ b/sites/mainframe50/css/scss/_ww_cci.scss
@@ -104,7 +104,7 @@
   padding-bottom: 10px;
 }
 
-#ibm-content p.ibm-last {
+#ibm-content p.ibm_last {
   padding-bottom: 30px;
 }
 
